--- a/res/layout/activity_lista_fragment.xml
+++ b/res/layout/activity_lista_fragment.xml
@@ -16,4 +16,13 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true" />
 
+    <Button
+        android:id="@+id/btntest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:text="Button" />
+
 </RelativeLayout>
